@@ -1841,6 +1841,7 @@ LISPSYM(load_compiling,"*LOAD-COMPILING*",custom) /* variable for SPVW */
 LISPSYM(load_verbose,"*LOAD-VERBOSE*",lisp) /* variable for SPVW */
 LISPSYM(load_print,"*LOAD-PRINT*",lisp) /* variable for SPVW */
 LISPSYM(compile_print,"*COMPILE-PRINT*",lisp) /* variable for SPVW */
+LISPSYM(compile_verbose,"*COMPILE-VERBOSE*",lisp) /* variable for SPVW */
 LISPSYM(args,"*ARGS*",ext) /* variable in SPVW */
 LISPSYM(appease_cerrors,"APPEASE-CERRORS",ext) /* macro for SPVW */
 LISPSYM(batchmode_errors,"BATCHMODE-ERRORS",system) /* macro for SPVW */
